--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: BUILD
-      run: make -C CarDescription
+      run: make all.out
     
